# whisper-dictation

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  flake.nix  justfile  plan.md  pyproject.toml  pytest.ini  whisper_dictation.py
.claude/: settings.json
.claude/hooks/: post-edit-format.sh  pre-bash-check.sh  pre-edit-check.sh
tests/: conftest.py  test_audio.py  test_cli.py  test_config.py  test_daemon.py  test_daemon_audio.py  test_example.py  test_ipc.py  test_models.py
whisper_dictation/: __init__.py  __main__.py  audio.py  cli.py  config.py  daemon.py  ipc.py  models.py
